Release Notes - Ikasan - Version 0.8.2

** Improvement
    * [IKASAN-575] - Allow dynamic runtime configuration to be persisted
    * [IKASAN-576] - Extend current implementation of (S)FTP endpoints to use alternative connection details
    * [IKASAN-578] - Ensure scheduled quartz triggers are removed and re-added as new on an initiator stop/start

** New Feature
    * [IKASAN-526] - Ability to persist and change initiator configuration parameters without a server bounce

** Task
    * [IKASAN-577] - Deprecate (S)FTP EndpointManager implementations
    * [IKASAN-580] - Release 0.8.2

Release Notes - Ikasan - Version 0.8.1

** Bug
    * [IKASAN-553] - TokenizingSplitter does not set the correct content on split payloads
    * [IKASAN-570] - SFTP/FTP connection pools offer up connections that are already involved in a txn
    * [IKASAN-573] - Setter for translets is incorrectly spelled on XSLTConfiguration

** Task
    * [IKASAN-574] - Release 0.8.1

Release Notes - Ikasan - Version 0.8.0

** Sub-task
    * [IKASAN-428] - Investigate encrypting the housekeeping password so it's not in plain text in a properties file
    * [IKASAN-439] - Merge 0.7.10 into trunk
    * [IKASAN-497] - Create and deploy ikasan.org / ikasan.com web site pages

** Bug
    * [IKASAN-69] - Several components are hard coded to use Sybase
    * [IKASAN-102] - FTP Sample App has MySQL setup files which do not adhere to case sensitivity, this causes a problem for non Windows based installs
    * [IKASAN-103] - Add parent pom.xml for documentation component
    * [IKASAN-140] - Remove build.xml file from connector-base, we use Maven to build now
    * [IKASAN-153] - Payload clone does not clone all fields
    * [IKASAN-171] - FOP warnings in documentation downloading using maven 2.2.1
    * [IKASAN-172] - Remove UpdatedDateTime from IkasanWiretep DAO and database schema
    * [IKASAN-180] - Create simpler implementation of JmsMessageEventSerialiser